--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,25 @@
-/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
+/*****************************************************************************
+  ALL
+******************************
+  *, @viewport
+******************************************************************************/
+* + * {
+    margin-top: 1.5em;
+}
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 html,
 button,
 input,
 select,
 textarea {
-    color: #222;
+    color: #333;
 }
 
 html {
