Add "Media" section

--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,16 @@ dd {
 
 
 
+/******************************************************************************
+  MEDIA
+*********
+  canvas, object, embed, img, audio, video, track, map, area, iframe
+******************************************************************************/
+img {
+    height: auto !important;
+    max-width: 100%;
+    width: auto !important;
+}
 
 
 
