--- a/css/main.css
+++ b/css/main.css
@@ -254,6 +254,42 @@ img {
 
 
 
+/******************************************************************************
+  FORMS
+*********
+  form, fieldset, legend, label, input, button, select, optgroup, option, 
+  datalist, textarea, output
+******************************************************************************/
+input, 
+select {
+    vertical-align: middle;
+}
+
+textarea {
+    resize: vertical;
+}
+
+/* todo: set :hover and :focus */
+
+
+
+/******************************************************************************
+  TABLES
+**********
+  table, caption, colgroup, col, thead, tfoot, tbody, tr, th, td
+******************************************************************************/
+th,
+td {
+    border: 1px solid #333;
+    padding: 0.25rem;
+}
+
+th {
+    background-color: #006b9f;
+    color: #fff;
+}
+
+
 
 
 /* ==========================================================================
