--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,30 @@ kbd {
 }
 
 
+/******************************************************************************
+  MISCELLANEOUS
+*****************
+  hr
+******************************************************************************/
+hr {
+    border: 0;
+    border-top: 1px solid #006b9f;
+    display: block;
+    height: 1px;
+    margin: 1rem 0;
+    padding: 0;
+}
+
+::-moz-selection {
+    background: #006b9f;
+    color: #fff;
+}
+
+::selection {
+    background-color: #006b9f;
+    color: #fff;
+}
+
 
 
 /* ==========================================================================
